--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/mrdanbrooks">View on GitHub</a>
 
           <h1 id="project_title">BEAN DIP! (names are soooo hard)</h1>
-          <h2 id="project_tagline"></h2>
+          <h2 id="project_tagline">Wub wub wub!</h2>
 
         </header>
     </div>
