--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Home
         . {{ post.category }} .
         <br/>
         <small> Tags:
-            {% for tag in page.tags %}
+            {% for tag in post.tags %}
             <a href="/tags/{{ tag }}" title="View posts tagged with &quot;&quot;;"><u>{{ tag }}</u></a>
             {% if forloop.last != true %} {% endif %}
             {% endfor %}
