--- a/systems.html
+++ b/systems.html
@@ -4,7 +4,7 @@ title: A guide to your digital life
 ---
 
 <div class="listing">
-    {% for post in paginator.categories.systems %}
+    {% for post in site.categories.systems %}
     <div class="post other link">
     {% comment %} Custom Icons for Categories {% endcomment %}
     {% assign caticon = "file-text" %}
