--- a/random.html
+++ b/random.html
@@ -1,4 +1,4 @@
 ---
 layout: category
 ---
-{% assign categorypages = site.categories.random %}
+{% assign page.categorypages = site.categories.random %}
